# docs/swagger.json
@@ -13,7 +13,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "articles"
+                    "Articles"
                 ],
                 "summary": "Lists the top 50 records",
                 "responses": {}
@@ -25,7 +25,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "articles"
+                    "Articles"
                 ],
                 "summary": "Finds the articles based on the SourceID provided.  Returns the top 50.",
                 "parameters": [
@@ -46,7 +46,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "articles"
+                    "Articles"
                 ],
                 "summary": "Returns an article based on defined ID.",
                 "parameters": [
@@ -67,8 +67,8 @@
                     "application/json"
                 ],
                 "tags": [
-                    "config",
-                    "source"
+                    "Config",
+                    "Source"
                 ],
                 "summary": "Lists the top 50 records",
                 "responses": {}
@@ -77,9 +77,9 @@
         "/config/sources/new/reddit": {
             "post": {
                 "tags": [
-                    "config",
-                    "source",
-                    "reddit"
+                    "Config",
+                    "Source",
+                    "Reddit"
                 ],
                 "summary": "Creates a new reddit source to monitor.",
                 "parameters": [
@@ -104,9 +104,9 @@
         "/config/sources/new/twitch": {
             "post": {
                 "tags": [
-                    "config",
-                    "source",
-                    "twitch"
+                    "Config",
+                    "Source",
+                    "Twitch"
                 ],
                 "summary": "Creates a new twitch source to monitor.",
                 "parameters": [
@@ -138,9 +138,9 @@
         "/config/sources/new/youtube": {
             "post": {
                 "tags": [
-                    "config",
-                    "source",
-                    "youtube"
+                    "Config",
+                    "Source",
+                    "YouTube"
                 ],
                 "summary": "Creates a new youtube source to monitor.",
                 "parameters": [
@@ -175,8 +175,8 @@
                     "application/json"
                 ],
                 "tags": [
-                    "config",
-                    "source"
+                    "Config",
+                    "Source"
                 ],
                 "summary": "Returns a single entity by ID",
                 "parameters": [
@@ -192,8 +192,8 @@
             },
             "delete": {
                 "tags": [
-                    "config",
-                    "source"
+                    "Config",
+                    "Source"
                 ],
                 "summary": "Deletes a record by ID.",
                 "parameters": [
@@ -211,8 +211,8 @@
         "/config/sources/{id}/disable": {
             "post": {
                 "tags": [
-                    "config",
-                    "source"
+                    "Config",
+                    "Source"
                 ],
                 "summary": "Disables a source from processing.",
                 "parameters": [
@@ -230,8 +230,8 @@
         "/config/sources/{id}/enable": {
             "post": {
                 "tags": [
-                    "config",
-                    "source"
+                    "Config",
+                    "Source"
                 ],
                 "summary": "Enables a source to continue processing.",
                 "parameters": [
@@ -252,7 +252,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "debug",
+                    "Debug",
                     "Discord",
                     "Queue"
                 ],
@@ -266,9 +266,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "config",
+                    "Config",
                     "Discord",
-                    "Webhooks"
+                    "Webhook"
                 ],
                 "summary": "Returns the top 100 entries from the queue to be processed.",
                 "responses": {}
@@ -280,9 +280,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "config",
+                    "Config",
                     "Discord",
-                    "Webhooks"
+                    "Webhook"
                 ],
                 "summary": "Returns the top 100 entries from the queue to be processed.",
                 "parameters": [
@@ -300,9 +300,9 @@
         "/discord/webhooks/new": {
             "post": {
                 "tags": [
-                    "config",
+                    "Config",
                     "Discord",
-                    "Webhooks"
+                    "Webhook"
                 ],
                 "summary": "Creates a new record for a discord web hook to post data to.",
                 "parameters": [
@@ -322,7 +322,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Channel name.",
+                        "description": "Channel name",
                         "name": "channel",
                         "in": "query",
                         "required": true
@@ -337,7 +337,7 @@
                     "text/plain"
                 ],
                 "tags": [
-                    "debug"
+                    "Debug"
                 ],
                 "summary": "Responds back with \"Hello x\" depending on param passed in.",
                 "parameters": [
@@ -358,7 +358,7 @@
                     "text/plain"
                 ],
                 "tags": [
-                    "debug"
+                    "Debug"
                 ],
                 "summary": "Responds back with \"Hello world!\"",
                 "responses": {}
@@ -370,7 +370,7 @@
                     "text/plain"
                 ],
                 "tags": [
-                    "debug"
+                    "Debug"
                 ],
                 "summary": "Sends back \"pong\".  Good to test with.",
                 "responses": {}
@@ -382,9 +382,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "settings"
+                    "Settings"
                 ],
-                "summary": "Returns a object based on the Key that was given/",
+                "summary": "Returns a object based on the Key that was given.",
                 "parameters": [
                     {
                         "type": "string",
@@ -403,8 +403,8 @@
                     "application/json"
                 ],
                 "tags": [
-                    "config",
-                    "Subscriptions"
+                    "Config",
+                    "Subscription"
                 ],
                 "summary": "Returns the top 100 entries from the queue to be processed.",
                 "responses": {}
@@ -416,8 +416,8 @@
                     "application/json"
                 ],
                 "tags": [
-                    "config",
-                    "Subscriptions"
+                    "Config",
+                    "Subscription"
                 ],
                 "summary": "Returns the top 100 entries from the queue to be processed.",
                 "parameters": [
@@ -438,8 +438,8 @@
                     "application/json"
                 ],
                 "tags": [
-                    "config",
-                    "Subscriptions"
+                    "Config",
+                    "Subscription"
                 ],
                 "summary": "Returns the top 100 entries from the queue to be processed.",
                 "parameters": [
@@ -447,6 +447,34 @@
                         "type": "string",
                         "description": "id",
                         "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/subscriptions/new/discordwebhook": {
+            "post": {
+                "tags": [
+                    "Config",
+                    "Source",
+                    "Discord",
+                    "Subscription"
+                ],
+                "summary": "Creates a new subscription to link a post from a Source to a DiscordWebHook.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "discordWebHookId",
+                        "name": "discordWebHookId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "sourceId",
+                        "name": "sourceId",
                         "in": "query",
                         "required": true
                     }
